# video2pdf

./: README.md  pyproject.toml  video2pdfslides.py
